<resources>
    <string name="app_name">মাটির প্রাণ</string>
    <string name="email_or_user_name_text">Email Or User Name</string>
    <string name="password_text">Password</string>
    <string name="login_in_text">Login in</string>
    <string name="login_logo">LOGIN_LOGO</string>
    <string name="aaa_text">AAA</string>
    <string name="image_id">IMAGE_ID</string>
    <string name="list_image_id">LIST_IMAGE_ID</string>
    <string name="launch_date_text">LAUNCH_DATE</string>
    <string name="name_text">NAME</string>
    <string name="range_text">RANGE</string>
</resources>
