<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingTop="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3c3f41">

        <ImageView
            android:id="@+id/iv_any_photo"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/launch_date_text"
            app:srcCompat="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_range"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/tv_range"
            android:layout_marginTop="3dp"
            android:maxLength="20"
            android:maxWidth="150dp"
            android:text="@string/name_text"
            android:textAlignment="center"
            android:textColor="#61d05d" />

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="93dp"
            android:layout_marginStart="93dp"
            android:maxLength="25"
            android:maxWidth="150dp"
            android:text="@string/range_text"
            android:textAlignment="center"
            android:textColor="#faf7f7" />

        <TextView
            android:id="@+id/tv_launch_date_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:maxWidth="150dp"
            android:textAlignment="center"
            android:textColor="#d72a92" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:maxWidth="150dp"
            android:textAlignment="center"
            android:textColor="#f0d044" />
    </RelativeLayout>
</RelativeLayout>